2003-12-08  Mark D. Baushke  <mdb@cvshome.org>

	* getdate.y: Remove #include <stdio.h> to avoid problems compiling
	AIX with '#define _LARGE_FILES 1' with Redeclaration of fgetpos64
	and ftello64. This may be an autoconf problem with
	AC_SYS_LARGEFILE.
	* getdate.c: Regenerated.

2003-12-03  Derek Price  <derek@ximbiot.com>

	* fncase.c (OSX_filename_classes): New array.
	(fncmp): Use FOLD_FN_CASE rather relying on the fact that it will be
	#defined to use WNT_filename_classes.
	* system.h: Define FOLD_FN_CASE, fncmp, and fnfold for all case
	insensitive filesystems.  Share some code between the new generic case
	insensitive section and the old WOE32 section.

2003-11-25  Mark D. Baushke  <mdb@cvshome.org>

	* Makefile.in: Regenerate for new configure.in.

2003-10-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove obsolete PROTO.h.
	* Makefile.in: Regenerated.

2003-10-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_LIBADD): Undo the previous change and move it
	into the program linking step in `../src'.
	* Makefile.in: Regenerated.

2003-10-21  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_LIBADD): Add $(LIBINTL) for gettext.
	* Makefile.in: Regenerated.

2003-10-04  Derek Price  <derek@ximbiot.com>

	* sighandle.c (SIG_handle): With the last commit, avoid allowing a
	second interrupt while this interrupt handler runs.
	(SIG_beginCrSect, SIG_endCrSect): With the last change, move these two
	functions to the top of this file to avoid prototyping them for
	SIG_handle().
	(*): C89ify some prototypes.

2003-10-04  Derek Price  <derek@ximbiot.com>

	* system.h (EXIT_FAILURE): Don't define here since it's defined in
	exit.h.

2003-10-01  Derek Price  <derek@ximbiot.com>

	* getpass.c: Update to new version from GNULIB with Larry's fix
	incorporated.

2003-10-01  Derek Price  <derek@ximbiot.com>

	* getopt.h, getopt.c, getopt1.c: Update from GNULIB.

2003-10-01  Derek Price  <derek@ximbiot.com>
